--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "A load generator function implementation",
   "repository": "n/a",
   "license": "Apache-2.0",
+  "scripts": {
+    "start": "artillery run artillery.yml"
+  },
   "dependencies": {
     "artillery": "git+https://github.com/Nordstrom/artillery.git#96552a4656ba7d1c32d8868754b1f1ab5299f8b8",
     "js-yaml": "^3.13.0",
